API doc updates
